--- a/main.css
+++ b/main.css
@@ -474,8 +474,8 @@ select:disabled {
 }
 #wrapperType {
     border-radius: 0.5vmin;
-    width: 20vh;
-    max-width: 20vh;
+    width: 18vw;
+    max-width: 18vw;
     margin-left:auto;
     margin-right:auto;
     display: inline-block;
@@ -504,7 +504,7 @@ select:disabled {
     flex: 1;
     display: block;
     box-sizing: border-box;
-    padding: 5%;
+    padding: 1vw;
     margin-left:auto;
     margin-right:auto;
 }
